--- a/index.html
+++ b/index.html
@@ -87,27 +87,27 @@
                             <div class="row justify-content-center form-group">
                                 <div class="col-12 controls-position-12">
                                     <label for="player_name_settings">Change name</label>
-                                    <input id="player_name_settings" class="form-control" type="text" placeholder="John">
+                                    <input id="player_name_settings" class="form-control" type="text" placeholder="eg John">
                                 </div>
                             </div>
                             <div class="row justify-content-center form-group">
                                 <div class="col-6 controls-position-6">
                                     <label for="round_one_rule_settings">Rule for round 1</label>
-                                    <input id="round_one_rule_settings" class="form-control" type="text" placeholder="Take a zip">
+                                    <input id="round_one_rule_settings" class="form-control" type="text" required>
                                 </div>
                                 <div class="col-6 controls-position-6">
                                     <label for="round_two_rule_settings">Rule for round 2</label>
-                                    <input id="round_two_rule_settings" class="form-control" type="text" placeholder="Take 2 zips">
+                                    <input id="round_two_rule_settings" class="form-control" type="text" required>
                                 </div>
                             </div>
                             <div class="row justify-content-center form-group">
                                 <div class="col-6 controls-position-6">
                                     <label for="round_three_rule_settings">Rule for round 3</label>
-                                    <input id="round_three_rule_settings" class="form-control" type="text" placeholder="Take 3 zips">
+                                    <input id="round_three_rule_settings" class="form-control" type="text" required>
                                 </div>
                                 <div class="col-6 controls-position-6">
                                     <label for="round_four_rule_settings">Rule for round 4</label>
-                                    <input id="round_four_rule_settings" class="form-control" type="text" placeholder="Take a shot">
+                                    <input id="round_four_rule_settings" class="form-control" type="text" required>
                                 </div>
                             </div>
                             <div class="row justify-content-center">
@@ -157,27 +157,27 @@
                                 <div class="row form-group">
                                     <div class="col-12">
                                         <label for="player_name">Name</label>
-                                        <input id="player_name" class="form-control" type="text" placeholder="John">
+                                        <input id="player_name" class="form-control" type="text" placeholder="eg John" required>
                                     </div>
                                 </div>
                                 <div class="row justify-content-center form-group">
                                     <div class="col-6">
                                         <label for="round_one_rule">Rule for round 1</label>
-                                        <input id="round_one_rule" class="form-control" type="text" placeholder="Take a zip">
+                                        <input id="round_one_rule" class="form-control" type="text" value="Take a zip" required>
                                     </div>
                                     <div class="col-6">
                                         <label for="round_two_rule">Rule for round 2</label>
-                                        <input id="round_two_rule" class="form-control" type="text placeholder="Take 2 zips">
+                                        <input id="round_two_rule" class="form-control" type="text" value="Take 2 zips" required>
                                     </div>
                                 </div>
                                 <div class="row justify-content-center form-group">
                                     <div class="col-6">
                                         <label for="round_three_rule">Rule for round 3</label>
-                                        <input id="round_three_rule" class="form-control" type="text" placeholder="Take 3 zips">
+                                        <input id="round_three_rule" class="form-control" type="text" value="Take 3 zips" required>
                                     </div>
                                     <div class="col-6">
                                         <label for="round_four_rule">Rule for round 4</label>
-                                        <input id="round_four_rule" class="form-control" type="text" placeholder="Take a shot">
+                                        <input id="round_four_rule" class="form-control" type="text" value="Take a shot" required>
                                     </div>
                                 </div>
                                 <button type="submit" class="btn btn-success btn-lg">Start the game!</button>
