--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                     </div>
                 </div>
                 <div class="row justify-content-center menu-heigth-spacing">
+                    <div id="settings_title" class="col-12 text-center">
+                        <h1 class="text-color mb-0">Settings</h1>
+                    </div>
                     <div class="col-4 controls-position-4 iphone5-position-fix">
                         <button id="settings_button" class="btn btn-primary">Settings</button>
                     </div>
@@ -46,14 +49,14 @@
                 </div>
                 <!--HERE THE COLLAPSABLE SETTINGS AREA BEGINS DEFAULT = DISPLAY: NONE-->
                 <div class="row justify-content-center">
-                    <div class="col-12 controls-position-12 settings-window">
+                    <div class="col-12 controls-position-12 settings-window mt-0">
                         <hr class="settings-divider">
                     </div>
                 </div>
                 <!--CUSTOM STYLING BUTTONS-->
                 <div class="row justify-content-center">
-                    <div class="col-12 controls-position-12 settings-window">
-                        <div class="d-inline-block dropdown show">
+                    <div class="col-12 controls-position-12 settings-window text-center">
+                        <div class="d-inline-block dropdown show mb-2">
                             <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLinkBackground" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Background
                             </a>
@@ -63,8 +66,8 @@
                             </div>
                         </div>
                         <div class="d-inline-block dropdown show">
-                            <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLinkColor" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Color Scheme
+                            <a class="btn btn-primary dropdown-toggle ml-2" href="#" role="button" id="dropdownMenuLinkColor" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Theme
                             </a>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLinkColor">
                                 <a class="dropdown-item" href="#" onClick="changeColorScheme('dark');">Dark</a>
@@ -73,6 +76,7 @@
                                 <a class="dropdown-item" href="#" onClick="changeColorScheme('orange');">Orange</a>
                             </div>
                         </div>
+                        <button id="rules_button" class="btn btn-primary ml-2">How to play</button>
                     </div>
                 </div>
                 <div class="row justify-content-center">
@@ -84,35 +88,55 @@
                 <div class="row justify-content-center">
                     <div class="col-12 text-color settings-window">
                         <form onsubmit="changeSettings(); return false;">
-                            <div class="row justify-content-center form-group">
-                                <div class="col-12 controls-position-12">
-                                    <label for="player_name_settings">Change name</label>
-                                    <input id="player_name_settings" class="form-control" type="text" placeholder="eg John">
+                            <!--SETTINGS VIEW-->
+                            <div id="settings_view">
+                                <div class="row justify-content-center form-group">
+                                    <div class="col-12 controls-position-12">
+                                        <label for="player_name_settings">Change name</label>
+                                        <input id="player_name_settings" class="form-control" type="text" placeholder="eg John">
+                                    </div>
+                                </div>
+                                <div class="row justify-content-center form-group">
+                                    <div class="col-6 controls-position-6">
+                                        <label for="round_one_rule_settings">Rule for round 1</label>
+                                        <input id="round_one_rule_settings" class="form-control" type="text" required>
+                                    </div>
+                                    <div class="col-6 controls-position-6">
+                                        <label for="round_two_rule_settings">Rule for round 2</label>
+                                        <input id="round_two_rule_settings" class="form-control" type="text" required>
+                                    </div>
+                                </div>
+                                <div class="row justify-content-center form-group">
+                                    <div class="col-6 controls-position-6">
+                                        <label for="round_three_rule_settings">Rule for round 3</label>
+                                        <input id="round_three_rule_settings" class="form-control" type="text" required>
+                                    </div>
+                                    <div class="col-6 controls-position-6">
+                                        <label for="round_four_rule_settings">Rule for round 4</label>
+                                        <input id="round_four_rule_settings" class="form-control" type="text" required>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="row justify-content-center form-group">
-                                <div class="col-6 controls-position-6">
-                                    <label for="round_one_rule_settings">Rule for round 1</label>
-                                    <input id="round_one_rule_settings" class="form-control" type="text" required>
-                                </div>
-                                <div class="col-6 controls-position-6">
-                                    <label for="round_two_rule_settings">Rule for round 2</label>
-                                    <input id="round_two_rule_settings" class="form-control" type="text" required>
-                                </div>
-                            </div>
-                            <div class="row justify-content-center form-group">
-                                <div class="col-6 controls-position-6">
-                                    <label for="round_three_rule_settings">Rule for round 3</label>
-                                    <input id="round_three_rule_settings" class="form-control" type="text" required>
-                                </div>
-                                <div class="col-6 controls-position-6">
-                                    <label for="round_four_rule_settings">Rule for round 4</label>
-                                    <input id="round_four_rule_settings" class="form-control" type="text" required>
+                            <!--RULES VIEW-->
+                            <div id="rules_view" class="row justify-content-center text-color">
+                                <div class="col-12 col-md-8 col-lg-6 controls-position-12">
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <h1>Rules</h1>
+                                        </div>
+                                        <div class="col-12 col-lg-6">
+                                            <p>This card game is all about luck! The goal is to reach the last round in which you have to guess the color of the card every round. If your guess is wrong you will need to do a specific action which will be specified for each round.</p>
+                                        </div>
+                                        <div class="col-12 col-lg-6">
+                                            <p>In the top of the screen you will be able to change color from 'RED' to 'BLACK' with black as default.</p>
+                                            <p>TIP: counting cards is possible!</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row justify-content-center">
                                 <div class="col-12 controls-position-12">
-                                    <button type="submit" class="btn btn-primary btn-lg">Save</button>
+                                    <button type="submit" class="btn btn-success btn-lg">Save</button>
                                     <button type="button" id="close_settings" class="float-right btn btn-secondary btn-lg">Close</button>
                                 </div>
                             </div>
