--- a/index.html
+++ b/index.html
@@ -76,7 +76,18 @@
                                 <a class="dropdown-item" href="#" onClick="changeColorScheme('orange');">Orange</a>
                             </div>
                         </div>
+                        <div class="d-inline-block dropdown show">
+                            <a class="btn btn-primary dropdown-toggle ml-2" href="#" role="button" id="dropdownMenuCardDesign" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Card design
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuCardDesign">
+                                <a class="dropdown-item" href="#" onClick="changeCardDesign('default');">Default</a>
+                                <a class="dropdown-item" href="#" onClick="changeCardDesign('goku');">Dragon Ball</a>
+                                <a class="dropdown-item" href="#" onClick="changeCardDesign('gokusuper');">Super Saiyan Goku</a>
+                            </div>
+                        </div>
                         <button id="rules_button" class="btn btn-primary ml-2">How to play</button>
+                        <p class="text-color mb-0 mt-1"><small>Note: Reshuffle the cards to let the card design take effect.</small></p>
                     </div>
                 </div>
                 <div class="row justify-content-center">
