--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLinkColor">
                                 <a class="dropdown-item" href="#" onClick="changeColorScheme('dark');">Dark</a>
                                 <a class="dropdown-item" href="#" onClick="changeColorScheme('light');">Light</a>
-                                <a class="dropdown-item" href="#" onClick="changeColorScheme('green');">Green</a>
-                                <a class="dropdown-item" href="#" onClick="changeColorScheme('orange');">Orange</a>
+                                <a class="dropdown-item" href="#" onClick="changeColorScheme('blue');">Sky blue</a>
+                                <a class="dropdown-item" href="#" onClick="changeColorScheme('red');">Fire red</a>
                             </div>
                         </div>
                         <div class="d-inline-block dropdown show">
@@ -82,12 +82,14 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuCardDesign">
                                 <a class="dropdown-item" href="#" onClick="changeCardDesign('default');">Default</a>
+                                <a class="dropdown-item" href="#" onClick="changeCardDesign('english');">English Bus</a>
+                                <a class="dropdown-item" href="#" onClick="changeCardDesign('tokyo');">City skyline</a>
                                 <a class="dropdown-item" href="#" onClick="changeCardDesign('goku');">Dragon Ball</a>
                                 <a class="dropdown-item" href="#" onClick="changeCardDesign('gokusuper');">Super Saiyan Goku</a>
                             </div>
                         </div>
                         <button id="rules_button" class="btn btn-primary ml-2">How to play</button>
-                        <p class="text-color mb-0 mt-1"><small>Note: Reshuffle the cards to let the card design take effect.</small></p>
+                        <p class="text-color mb-0 mt-1"><small>*Note: Redeal the cards to let the card design take effect.</small></p>
                     </div>
                 </div>
                 <div class="row justify-content-center">
