--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLinkBackground">
                                 <a class="dropdown-item" href="#" onClick="changeBackground('background_green');">Green Table</a>
                                 <a class="dropdown-item" href="#" onClick="changeBackground('background_red');">Red Table</a>
+                                <a class="dropdown-item" href="#" onClick="changeBackground('sunset');">Sunset</a>
+                                <a class="dropdown-item" href="#" onClick="changeBackground('clouds');">Clouds</a>
+                                <a class="dropdown-item" href="#" onClick="changeBackground('amsterdam');">Amsterdam</a>
                             </div>
                         </div>
                         <div class="d-inline-block dropdown show">
