--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
                         <span id="card9" class="card_box"></span>
                     </button>
                 </div>
+                <div class="card-height-spacing"></div>
             </div>
         </div>
     </div>
